-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 9
-
Component/s: hotspot
-
b107
-
aarch64
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8183667 | 8u161 | David Buck | P2 | Resolved | Fixed | b01 |
| JDK-8178280 | 8u152 | David Buck | P2 | Closed | Fixed | b03 |
| JDK-8192230 | emb-8u161 | David Buck | P2 | Resolved | Fixed | b01 |
# after -XX: or in .hotspotrc: SuppressErrorAt=/runtime.cpp:1307
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/opt/jprt/T/P1/183830.vkozlov/s/hotspot/src/share/vm/opto/runtime.cpp:1307), pid=31672, tid=5324
# assert(handler_address == SharedRuntime::compute_compiled_exc_handler(nm, pc, exception, force_unwind, true)) failed: Must be the same
#
# JRE version: Java(TM) SE Runtime Environment (9.0) (build 1.9.0-internal-fastdebug-20151123183830.vkozlov.8143307-b00)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (1.9.0-internal-fastdebug-20151123183830.vkozlov.8143307-b00, compiled mode, compressed oops, g1 gc, linux-aarch64)
# Core dump will be written. Default location: Core dumps may be processed with "/usr/share/apport/apport %p %s %c %P" (or dumping to /export/local/aurora/sandbox/results/medrec_domain/core.31672)
#
# An error report file with more information is saved as:
# /export/local/aurora/sandbox/results/medrec_domain/hs_err_pid31672.log
#
# If you would like to submit a bug report, please visit:
# http://bugreport.java.com/bugreport/crash.jsp
#
- backported by
-
JDK-8183667 Weblogic12medrec assert(handler_address == SharedRuntime::compute_compiled_exc_handler(nm, pc, exception, force_unwind, true)) failed: Must be the same
-
- Resolved
-
-
JDK-8192230 Weblogic12medrec assert(handler_address == SharedRuntime::compute_compiled_exc_handler(nm, pc, exception, force_unwind, true)) failed: Must be the same
-
- Resolved
-
-
JDK-8178280 Weblogic12medrec assert(handler_address == SharedRuntime::compute_compiled_exc_handler(nm, pc, exception, force_unwind, true)) failed: Must be the same
-
- Closed
-
- relates to
-
JDK-8164480 Crash with assert(handler_address == SharedRuntime::compute_compiled_exc_handler(..) failed: Must be the same
-
- Closed
-
-
JDK-8153267 nmethod's exception cache not multi-thread safe
-
- Resolved
-