8143897: Weblogic12medrec assert(handler_address == SharedRuntime::compute_compiled_exc_handler(nm, pc, exception, force_unwind, true)) failed: Must be the same

ExceptionCache read is lock-free and assume strong memory ordering in write code. Added storestore memory barrier in write path to handle this.

Reviewed-by: kvn, thartmann, dlong